syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (Token);
  rpc Login (LoginRequest) returns (Token);
}


message Token {
  string token = 1;
}

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  Role role = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

enum Role {
  Admin = 0;
  Athlete = 1;
  Trainer = 2;
}
